--- a/public/perm/perm.css
+++ b/public/perm/perm.css
@@ -223,8 +223,8 @@ article {
     margin: 0.25em;
   }
   
-  .inscrit {
-    background-color: #03fa10;
+  .crenau.inscrit {
+    background-color: #104312;
   }
 
   .reserve{
